[package]
edition = "2021"
name = "rust_sol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4.4.3"
casper-erc20 = { path = "src/erc20" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = {version = "0.19", features = ["recovery"] }
sha2 = "0.10.0"
rand = "0.8.4"
aes-gcm = "0.9.4"
ethereum-types = "0.9"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]
